--- a/src/app/floorPlan/floorPlan.component.html
+++ b/src/app/floorPlan/floorPlan.component.html
@@ -2,20 +2,20 @@
 <div class="container mt-7">
   <div class="row">
     <div class="col-1">
-      <div data-toggle="sticky" data-sticky-offset="30">
+      <div style="position: -webkit-sticky; position: sticky; top: 6rem; align-self: flex-start;">
         <nav class="nav flex-column font-weight-bold">
-          <a class="nav-item nav-link active mb-2" data-toggle="tab" href="#v1" role="tab" aria-selected="true">V1</a>
-          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v2" role="tab" aria-selected="true">V2</a>
-          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v3" role="tab" aria-selected="true">V3</a>
-          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v4" role="tab" aria-selected="true">V4</a>
-          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v5" role="tab" aria-selected="true">V5</a>
-          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v6" role="tab" aria-selected="true">V6</a>
+          <a class="nav-item nav-link active mb-2" data-toggle="tab" href="#v1" role="tab" aria-selected="true" (click)="topFunction()">V1</a>
+          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v2" role="tab" aria-selected="true" (click)="topFunction()">V2</a>
+          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v3" role="tab" aria-selected="true" (click)="topFunction()">V3</a>
+          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v4" role="tab" aria-selected="true" (click)="topFunction()">V4</a>
+          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v5" role="tab" aria-selected="true" (click)="topFunction()">V5</a>
+          <a class="nav-item nav-link mb-2" data-toggle="tab" href="#v6" role="tab" aria-selected="true" (click)="topFunction()">V6</a>
         </nav>
       </div>
     </div>
     <div class="col-11">
       <div class="tab-content" id="myTabContent">
-        <div class="tab-pane fade show active" id="v1" role="tabpanel">
+        <div class="tab-pane show active" id="v1" role="tabpanel">
           <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V1 Floor Plan</h1>
@@ -30,7 +30,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="v2" role="tabpanel">
+        <div class="tab-pane" id="v2" role="tabpanel">
           <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V2 Floor Plan</h1>
@@ -47,7 +47,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="v3" role="tabpanel">
+        <div class="tab-pane" id="v3" role="tabpanel">
           <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V3 Floor Plan</h1>
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="v4" role="tabpanel">
+        <div class="tab-pane" id="v4" role="tabpanel">
           <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V4 Floor Plan</h1>
@@ -81,7 +81,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="v5" role="tabpanel">
+        <div class="tab-pane" id="v5" role="tabpanel">
           <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V5 Floor Plan</h1>
@@ -112,7 +112,7 @@
             </div>
           </div>
         </div>
-        <div class="tab-pane fade" id="v6" role="tabpanel">
+        <div class="tab-pane" id="v6" role="tabpanel">
           <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V6 Floor Plan</h1>
