--- a/src/app/virtualRoom/virtualRoom.component.html
+++ b/src/app/virtualRoom/virtualRoom.component.html
@@ -2,13 +2,14 @@
 <div class="container-fluid bg-white d-block mt-7 px-5">
   <div class="row">
     <div class="col-4">
-      <div class="card hover-shadow-lg">
-        <div class="card-header d-flex align-items-center justify-content-between">
+      <div class="card hover-shadow-lg mb-4">
+        <div class="card-header d-flex align-items-center justify-content-between py-4">
           <div class="row px-3">
             <span class="badge badge-lg badge-success mr-2">
               <h5 class="font-weight-bold m-0 text-white">Virtual Room</h5>
             </span>
-            <button *ngIf="vrHost == publicAuth.studentID" type="button" class="btn btn-soft-primary btn-icon-only" (click)="modalEvent('modalDeleteVR')">
+            <button *ngIf="vrHost == publicAuth.studentID" type="button" class="btn btn-soft-dark btn-icon-only"
+              (click)="modalEvent('modalDeleteVR')">
               <span class="btn-inner--icon">
                 <i class="fas fa-trash-alt"></i>
               </span>
@@ -16,8 +17,9 @@
           </div>
           <!-- <h5 class="font-weight-bold m-0"><i class="fas fa-users mr-2"></i>Virtual Room</h5> -->
           <div class="text-right">
-            <h1 class="font-weight-bold m-0 hover-scale-110 lh-100">{{ vrInfo[0]?.vrCode }}</h1>
-            <p class="m-0 text-sm font-weight-600 text-success">{{ vrInfo[0]?.vrPassword }}</p>
+            <h1 class="font-weight-bold m-0 hover-scale-110 lh-100">
+              <a href="javascript:void(0)" (click)="modalEvent('modalPassword')">{{ vrInfo[0]?.vrCode }}</a>
+            </h1>
           </div>
         </div>
         <div class="card-body">
@@ -28,136 +30,184 @@
             room's HOST will be able to proceed with room booking once the room is full.</p>
         </div>
       </div>
-      <div class="card hover-shadow-lg">
-        <div class="card-header">
-          <h5 class="font-weight-bold m-0">Room Information</h5>
+      <div id="accordion-2" class="accordion accordion-spaced">
+        <div class="card">
+            <div class="card-header py-4" id="heading-2-1" data-toggle="collapse" role="button" data-target="#collapse-2-1" aria-expanded="false" aria-controls="collapse-2-1">
+              <h5 class="font-weight-bold m-0"><i class="fas fa-info-circle mr-2"></i>Room Information</h5>
+            </div>
+            <div id="collapse-2-1" class="collapse" aria-labelledby="heading-2-1" data-parent="#accordion-2">
+              <div class="card-body">
+                <small class="h6 text-sm font-weight-bold">Room Capacity:</small>
+                <p class="text-sm lh-160 mb-3">{{ vrInfo[0]?.vrCapacity }}</p>
+                <small class="h6 text-sm font-weight-bold">Host:</small>
+                <div class="card mb-3 bg-gray-400 border-0">
+                  <div class="card-body">
+                    <div class="d-flex align-items-center">
+                      <span
+                        class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">1</span>
+                      <div class="avatar-content ml-3">
+                        <h5 class="mb-0 font-weight-bold">{{ vrHostInfo[0]?.studentName | uppercase }}</h5>
+                        <small class="d-block text-muted font-weight-bold">Email:
+                          {{ vrHostInfo[0]?.studentEmail }}</small>
+                        <small class="d-block text-muted font-weight-bold">Phone: {{ vrHostInfo[0]?.studentContact }}</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <small class="h6 text-sm font-weight-bold">Roommates joined:</small>
+                <div *ngFor="let m of vrRoommatesInfo; let i = index" class="card mb-2 bg-gray-400 border-0">
+                  <div class="card-body">
+                    <div class="d-flex align-items-center">
+                      <span
+                        class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">{{ i+2 }}</span>
+                      <div class="avatar-content ml-3">
+                        <h5 class="mb-0 font-weight-bold">{{ m.studentName | uppercase }}</h5>
+                        <small class="d-block text-muted font-weight-bold">Email:
+                          {{ m.studentEmail }}</small>
+                        <small class="d-block text-muted font-weight-bold">Phone: {{ m.studentContact }}</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="card hover-shadow-lg" style="position: -webkit-sticky; position: sticky; top: 6rem; align-self: flex-start;">
+        <div *ngIf="!showBookingDetails" class="card-header py-4">
+          <h5 class="font-weight-bold m-0 text-success"><i class="fas fa-check-circle mr-2"></i>Booking Cart</h5>
+        </div>
+        <div *ngIf="showBookingDetails" class="card-header d-flex justify-content-between pt-4">
+          <h5 class="font-weight-bold m-0 text-success"><i class="fas fa-check-circle mr-2"></i>Booking Cart</h5>
+          <a href="javascript:void(0)" (click)="clearCart()"><h5><i class="fas fa-redo-alt"></i></h5></a>
         </div>
         <div class="card-body">
-          <small class="h6 text-sm font-weight-bold">Room Capacity:</small>
-          <p class="text-sm lh-160 mb-3">{{ vrInfo[0]?.vrCapacity }}</p>
-          <small class="h6 text-sm font-weight-bold">Host:</small>
-          <div class="card mb-3 bg-gray-400 border-0">
-            <div class="card-body">
-              <div class="d-flex align-items-center">
-                <span
-                  class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">1</span>
-                <div class="avatar-content ml-3">
-                  <h5 class="mb-0 font-weight-bold">{{ vrHostInfo[0]?.studentName | uppercase }}</h5>
-                  <small class="d-block text-muted font-weight-bold">Email:
-                    {{ vrHostInfo[0]?.studentEmail }}</small>
-                  <small class="d-block text-muted font-weight-bold">Phone: {{ vrHostInfo[0]?.studentContact }}</small>
-                </div>
-              </div>
+          <div *ngIf="!showBookingDetails">
+            <div class="align-self-center text-center mr-2">
+              <img alt="Image placeholder" src="../../assets/img/svg/illustrations/Market launch-pana.svg"
+                class="svg-inject img-fluid">
             </div>
           </div>
-          <small class="h6 text-sm font-weight-bold">Roommates joined:</small>
-          <div *ngFor="let m of vrRoommatesInfo; let i = index" class="card mb-2 bg-gray-400 border-0">
-            <div class="card-body">
-              <div class="d-flex align-items-center">
-                <span
-                  class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">{{ i+2 }}</span>
-                <div class="avatar-content ml-3">
-                  <h5 class="mb-0 font-weight-bold">{{ m.studentName | uppercase }}</h5>
-                  <small class="d-block text-muted font-weight-bold">Email:
-                    {{ m.studentEmail }}</small>
-                  <small class="d-block text-muted font-weight-bold">Phone: {{ m.studentContact }}</small>
-                </div>
-              </div>
+          <div *ngIf="showBookingDetails" class="table-responsive">
+            <table class="table table-cards align-items-center">
+              <thead>
+                <tr>
+                  <th scope="col" class="col">Room</th>
+                  <th scope="col" class="col">Aircond</th>
+                  <th scope="col" class="col">No. of Semester</th>
+                  <th scope="col" class="text-right col">Room Price</th>
+                </tr>
+              </thead>
+              <tbody class="list">
+                <tr>
+                  <th scope="row">
+                    <div class="align-items-center">
+                      <div class="lh-100 mb-2">
+                        <span class="text-dark font-weight-bold">Village {{ selectedRoom.village }}</span>
+                      </div>
+                      <div class="lh-100 mb-2">
+                        <span class="text-muted font-weight-bold">{{ selectedRoom.roomNumber }}</span>
+                      </div>
+                    </div>
+                  </th>
+                  <td>
+                    <span class="font-weight-bold text-dark">{{ selectedRoom.aircond }}</span>
+                  </td>
+                  <td>
+                    <div class="align-items-center">
+                      <a href="javascript:void(0)" class="btn-inner--icon text-muted" (click)="deleteQuantity()">
+                        <i class='fas fa-minus'></i>
+                      </a>
+                      <span class="badge badge-secondary mx-2 text-xs">
+                        {{ numberOfSemester }}
+                      </span>
+                      <a href="javascript:void(0)" class="btn-inner--icon text-muted" (click)="addQuantity()">
+                        <i class='fas fa-plus'></i>
+                      </a>
+                    </div>
+                  </td>
+                  <td class="text-right">
+                    <span class="font-weight-bold text-dark">RM {{ selectedRoom.unitPrice | number:'.2' }}</span>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div *ngIf="showBookingDetails" class="row">
+            <div class="col-9">
+              <h6 class="text-muted font-weight-bold mt-4 pt-2 text-right text-sm">Total:</h6>
+              <h6 class="text-muted font-weight-bold mt-2 text-right text-sm">Total per student:</h6>
+            </div>
+            <div class="col-3">
+              <h6 class="text-success font-weight-bold mt-4 pt-2 text-right text-sm mr-1">RM {{ totalFees | number:'.2'}}</h6>
+              <h6 class="text-success font-weight-bold mt-2 text-right text-sm mr-1">RM {{ totalFees/vrCapacity | number:'.2'}}</h6>
             </div>
           </div>
+        </div>
+        <div class="card-footer px-0 py-0 border-0 overflow-hidden">
+          <button *ngIf="showBookingDetails" class="btn btn-block btn-success rounded-0" [disabled]="!showBookingDetails" (click)="submit()">Submit</button>
+          <button *ngIf="!showBookingDetails" class="btn btn-block btn-success rounded-0" disabled>Cart Empty</button>
         </div>
       </div>
     </div>
 
-    <div *ngIf="vrInfo[0].vrHost == publicAuth.studentID && vrInfo[0].vrCapacity == vrInfo[0].currentCapacity" class="col-8">
+    <div *ngIf="vrInfo[0].vrHost == publicAuth.studentID && vrInfo[0].vrCapacity == vrInfo[0].currentCapacity"
+      class="col-8">
       <div class="card">
         <div class="card-body">
           <h6 class="mb-4">Step 1: Choose a village</h6>
           <nav class="nav nav-pills nav-pills-icon nav-justified font-weight-bold">
-            <a class="nav-item nav-link active" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="true">V1</a>
-            <a class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="true">V2</a>
-            <a class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="true">V3</a>
-            <a class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="true">V4</a>
-            <a class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="true">V5</a>
-            <a class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="true">V6</a>
-
+            <a *ngFor="let m of village" class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)"
+              role="tab" (click)="getBuilding(m.village)" aria-selected="true">V{{ m.village }}</a>
           </nav>
         </div>
       </div>
 
-      <div class="card">
+      <div *ngIf="showBuilding" class="card">
         <div class="card-body">
           <h6 class="mb-4">Step 2: Choose a building</h6>
           <nav class="nav nav-pills nav-pills-icon nav-justified font-weight-bold">
-            <a class="nav-item nav-link active" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="true">V1A</a>
-            <a class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)" role="tab"
-              aria-selected="false">V1B</a>
+            <a *ngFor="let m of building" class="nav-item nav-link" data-toggle="tab" href="javascript:void(0)"
+              role="tab" (click)="getRoom(m.block)" aria-selected="true">{{ m.block }}</a>
           </nav>
         </div>
       </div>
 
-      <div class="card">
+      <div *ngIf="showRoom" class="card">
         <div class="card-body">
           <h6 class="mb-4">Step 3: Choose a room</h6>
-          <div class="table-responsive">
+          <div *ngIf="room.length == 0">
+            <div class="text-center align-items-center py-5">
+              <h4>Opps. All rooms are occupied...</h4>
+              <p>Please proceed with individual booking.</p>
+            </div>
+          </div>
+          <div *ngIf="room.length != 0" class="table-responsive">
             <table class="table table-bordered rounded">
               <thead>
                 <tr>
                   <th scope="col" class="col">Room</th>
-                  <th scope="col" class="col">Bed</th>
                   <th scope="col" class="col">Aircond</th>
-                  <th scope="col" class="col">Price</th>
+                  <th scope="col" class="col">Capacity</th>
+                  <th scope="col" class="col">Room Price</th>
+                  <th scope="col" class="col">Price per student</th>
                   <th scope="col" class="text-center col">Action</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">V5A-L3-05</th>
-                  <td>A</td>
-                  <td>No</td>
-                  <td>MYR 750</td>
+                <tr *ngFor="let m of room">
+                  <th scope="row">{{ m.roomNumber }}
+                    <span *ngIf="m.status == 1" class="badge badge-soft-danger ml-2">
+                      Occupied
+                    </span>
+                  </th>
+                  <td class="text-center">{{ m.aircond }}</td>
+                  <td class="text-center">{{ m.capacity }}</td>
+                  <td class="text-center">RM {{ m.unitPrice | number:'.2' }}</td>
+                  <td class="text-center">RM {{ m.price | number:'.2' }}</td>
                   <td class="text-right">
-                    <button type="button" class="btn btn-sm btn-outline-primary py-1">
-                      Select
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <th scope="row">V5A-L3-05</th>
-                  <td>B</td>
-                  <td>No</td>
-                  <td>MYR 750</td>
-                  <td class="text-right">
-                    <button type="button" class="btn btn-sm btn-outline-primary py-1">
-                      Select
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <th scope="row">V5A-L3-06</th>
-                  <td>A</td>
-                  <td>No</td>
-                  <td>MYR 750</td>
-                  <td class="text-right">
-                    <button type="button" class="btn btn-sm btn-outline-primary py-1">
-                      Select
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <th scope="row">V5A-L3-06</th>
-                  <td>B</td>
-                  <td>No</td>
-                  <td>MYR 750</td>
-                  <td class="text-right">
-                    <button type="button" class="btn btn-sm btn-outline-primary py-1">
+                    <button type="button" class="btn btn-sm btn-outline-primary py-1" (click)="selectRoom(m)"
+                      [disabled]="m.status == 1">
                       Select
                     </button>
                   </td>
@@ -181,13 +231,15 @@
       </div>
     </div>
 
-    <div *ngIf="vrInfo[0].vrHost == publicAuth.studentID && vrInfo[0].vrCapacity != vrInfo[0].currentCapacity" class="col-8">
+    <div *ngIf="vrInfo[0].vrHost == publicAuth.studentID && vrInfo[0].vrCapacity != vrInfo[0].currentCapacity"
+      class="col-8">
       <div class="card overflow-hidden border-0">
         <img alt="Image placeholder" src="../../assets/img/theme/light/img-2.jpg" class="card-img-top">
         <span class="mask bg-success opacity-9"></span>
         <div class="card-img-overlay d-flex flex-column">
           <div class="my-auto text-center px-3 py-5">
-            <h3 class="text-white hover-scale-110 mb-0">The host will be allowed to proceed with room booking<br>only when the room is full.</h3>
+            <h3 class="text-white hover-scale-110 mb-0">The host will be allowed to proceed with room booking<br>only
+              when the room is full.</h3>
           </div>
         </div>
       </div>
@@ -202,7 +254,8 @@
       <div class="modal-body">
         <div>
           <h5 class="modal-title text-center mb-2" id="myLargeModalLabel">Virtual Room Deletion</h5>
-          <p class="text-center mb-4 text-sm lh-140">All students inside this virtual room will be disbanded. They are required
+          <p class="text-center mb-4 text-sm lh-140">All students inside this virtual room will be disbanded. They are
+            required
             to book room individually or recreate a new virtual room. Are you sure to proceed with deleting this
             virtual room?</p>
           <button type="button" class="btn btn-block btn-animated btn-danger btn-animated-x" (click)="deleteVR()">
@@ -212,6 +265,30 @@
             </span>
           </button>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal modal-danger bg-translucent-dark fade" id="roomOccupied" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document" data-backdrop="false">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span class="h4" aria-hidden="true">&times;</span>
+        </button>
+        <h5 class="text-center text-white my-4"><i class="fas fa-exclamation-triangle fa-4x"></i></h5>
+        <h5 class="modal-title text-center mb-4" id="myLargeModalLabel">Opps, someone is ahead of you.<br />Room
+          occupied!</h5>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="modal bg-translucent-dark fade" id="modalPassword" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered modal-sm" role="document" data-backdrop="false">
+    <div class="modal-content">
+      <div class="modal-body">
+        <h6 class="modal-title text-muted text-center mt-2">Password</h6>
+        <h5 class="modal-title text-success text-center mb-2">{{ vrInfo[0]?.vrPassword }}</h5>
       </div>
     </div>
   </div>
