bulk booking completed

--- a/src/app/moduleBooking/singleBooking/singleBooking.component.html
+++ b/src/app/moduleBooking/singleBooking/singleBooking.component.html
@@ -197,3 +197,14 @@
     </div>
   </div>
 </div>
+<div class="modal modal-success bg-translucent-dark fade" id="bookSucessfully" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered" role="document" data-backdrop="false">
+    <div class="modal-content">
+      <div class="modal-body">
+        <h5 class="text-center text-white my-4"><i class="fas fa-check-circle fa-4x"></i></h5>
+        <h5 class="modal-title mb-2 text-center">Awesome!</h5>
+        <p class="text-sm mb-4 text-center">Your booking has been confirmed, check your email for booking details. You will be redirected to booking history page.</p>
+      </div>
+    </div>
+  </div>
+</div>
