--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -74,7 +74,7 @@
               <tbody>
                 <tr *ngFor="let m of bookingHistory" class="text-center">
                   <th scope="row">{{ m?.checkInDate | date:'yyyy' }}</th>
-                  <td>{{ m?.checkInDate | date:'dd/MM/yyyy' }} - {{ m?.checkOutDate | date:'dd/MM/yyyy' }}</td>
+                  <td>{{ m?.checkInDate | date:'dd/MM/yyyy' }} - {{ m?.checkOutDate | date:'dd/MM/yyyy' }} <span class="font-weight-bold">( {{ m?.numberOfSemester }} sem )</span></td>
                   <td>{{ m?.village }}</td>
                   <td>{{ m?.roomNumber }}</td>
                   <td>{{ m?.bed }}</td>
