--- a/src/scss/purpose/_variables.scss
+++ b/src/scss/purpose/_variables.scss
@@ -40,7 +40,7 @@ $yellow:  #ffcc00 !default;
 $green:   #36B37E !default;
 $teal:    #00B8D9 !default;
 $cyan:    #4bd6e5 !default;
-$sored:    #7e6a58 !default;
+$sored:    #8c7364 !default;
 $brown:    #d2b193 !default;
 
 $colors: () !default;
