--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <div class="col">
           <div class="row">
             <div class="col-6 align-self-center">
-              <h1 class="font-weight-900 text-white mb-4 display-3" style="text-shadow: 0px 0px 6px #7e6a58;">Roomy</h1>
+              <h1 class="font-weight-900 text-white mb-4 display-3" style="text-shadow: 0px 0px 6px #53463b;">Roomy</h1>
               <p class="lead lh-180 text-white font-weight-bold" style="text-shadow: 0px 0px 4px #7e6a58;">Roomy is an <br>
                 <span class="text-dark" style="text-shadow: 0px 0px 0px #7e6a58;">Automated Student Accommodation Booking System</span>
                 <br>that takes room booking to the next level.</p>
